fixtures/invalid/33-v0.9-with-substance/input.anatomy
anatomy_version = "0.9"
tagline = "v0.9 fixture with [[substance.key_dependencies]] — must be rejected"

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "rejected-sub"
fingerprint = "7rdd3scyhy0h45rgrt6k"

[[substance.key_dependencies]]
name = "ajv"
why = "schema validation"

[generated]
at = 2026-05-09T12:00:00.000Z
by = "anatomy-cli@0.12.0"
model = "none"
schema = "https://anatomy.dev/spec/0.9/schema.json"
